--- a/admission.html
+++ b/admission.html
@@ -777,7 +777,7 @@
                                                                 <input type="text" name="your-name" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
                                                                     aria-required="true" aria-invalid="false"
-                                                                    placeholder="Emergency Contact Relation*"/>
+                                                                    placeholder="Emergency Contact Relation*" />
                                                             </span></p>
 
                                                         <p>
@@ -882,59 +882,125 @@
                                                                 <select name="certificates"
                                                                     class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required"
                                                                     aria-required="true" aria-invalid="false">
-                                                                    <option value="Select Certificate*">Select Certificate*
+                                                                    <option value="Select Certificate*">Select
+                                                                        Certificate*
                                                                     </option>
                                                                 </select>
                                                             </span>
                                                         </p>
 
                                                         <p><span class="wpcf7-form-control-wrap tour-date">Start Date
-                                                            <input
-                                                            type="date" name="tour-date" value=""
-                                                            class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date"
-                                                            min="2018-08-01" max="2058-12-31"
-                                                            aria-required="true" aria-invalid="false"
-                                                            placeholder="Select Date*" /></span></p>
+                                                                <input type="date" name="tour-date" value=""
+                                                                    class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date"
+                                                                    min="2018-08-01" max="2058-12-31"
+                                                                    aria-required="true" aria-invalid="false"
+                                                                    placeholder="Select Date*" /></span></p>
 
-                                                            <p><span class="wpcf7-form-control-wrap tour-date">End Date
-                                                                <input
-                                                                type="date" name="tour-date" value=""
-                                                                class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date"
-                                                                min="2018-08-01" max="2058-12-31"
-                                                                aria-required="true" aria-invalid="false"
-                                                                placeholder="Select Date*" /></span></p>
+                                                        <p><span class="wpcf7-form-control-wrap tour-date">End Date
+                                                                <input type="date" name="tour-date" value=""
+                                                                    class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date"
+                                                                    min="2018-08-01" max="2058-12-31"
+                                                                    aria-required="true" aria-invalid="false"
+                                                                    placeholder="Select Date*" /></span></p>
 
-                                                                
-                                                                <p>Raffles Programme<hr></p>
-                                                                <p>
-                                                                    <span
-                                                                        class="wpcf7-form-control-wrap country-dropdown">Programme
-                                                                        <select name="programmes"
-                                                                            class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required"
-                                                                            aria-required="true" aria-invalid="false">
-                                                                            <option value="Programmes*">Select Programme*
-                                                                            </option>
-                                                                        </select>
-                                                                    </span>
-                                                                </p>
+                                                        <p>Raffles Programme
+                                                            <hr>
+                                                        </p>
+                                                        <p>
+                                                            <span
+                                                                class="wpcf7-form-control-wrap country-dropdown">Programme
+                                                                <select name="programmes"
+                                                                    class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required"
+                                                                    aria-required="true" aria-invalid="false">
+                                                                    <option value="Programmes*">Select Programme*
+                                                                    </option>
+                                                                </select>
+                                                            </span>
+                                                        </p>
 
-                                                                <p>
-                                                                    <span
-                                                                        class="wpcf7-form-control-wrap country-dropdown">Commencing Intake
-                                                                        <select name="commencing"
-                                                                            class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required"
-                                                                            aria-required="true" aria-invalid="false">
-                                                                            <option value="Commencing*">Select Commencing Intake
-                                                                            </option>
-                                                                        </select>
-                                                                    </span>
-                                                                </p>
+                                                        <p>
+                                                            <span
+                                                                class="wpcf7-form-control-wrap country-dropdown">Commencing
+                                                                Intake
+                                                                <select name="commencing"
+                                                                    class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required"
+                                                                    aria-required="true" aria-invalid="false">
+                                                                    <option value="Commencing*">Select Commencing Intake
+                                                                    </option>
+                                                                </select>
+                                                            </span>
+                                                        </p>
+
+                                                        <p>English Language Profficiency</p>
+                                                        <p>Students whose native language is not English must submit
+                                                            evidence of Proficiency in the language. Students must meet
+                                                            the minimum English standard as stipulated below to commence
+                                                            their registered Advanced Diploma courses with Raffles
+                                                            Design Institute.
+                                                            <hr>
+                                                        </p>
+
+                                                        <h6>Level of English Profficiency
+                                                            (required)</h6>
+                                                        <p class="p-about4">- TOEFL (Test of English as a Foreign
+                                                            Language) with minimum score of 500 (paper-based) or 59 to
+                                                            60 (internet-based), taken during the last two years
+                                                            <br>- IELTS (International English Language Testing System)
+                                                            with
+                                                            a minimum score of 5.0, taken during the last two years
+                                                        </p>
+                                                        <form action="">
+                                                            <div class="form-check">
+                                                                <input class="form-check-input" type="radio"
+                                                                    name="flexRadioDefault" id="flexRadioDefault1">
+                                                                <label class="form-check-label" for="flexRadioDefault1">
+                                                                    IELTS
+                                                                </label>
+                                                            </div>
+                                                            <div class="form-check">
+                                                                <input class="form-check-input" type="radio"
+                                                                    name="flexRadioDefault" id="flexRadioDefault2"
+                                                                    checked>
+                                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                                    TOEFL
+                                                                </label>
+                                                            </div>
+                                                            <div class="form-check">
+                                                                <input class="form-check-input" type="radio"
+                                                                    name="flexRadioDefault" id="flexRadioDefault2"
+                                                                    checked>
+                                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                                    None
+                                                                </label>
+                                                            </div>
+                                                        </form>
+                                                        <br>
+                                                        <P>Test Date</P>
+                                                        <p> Students who do not meet the maximum requirement as
+                                                            stipulated above will need to take the Raffles Design
+                                                            Institute English Placement Test</p>
+                                                        <p><br><span class="wpcf7-form-control-wrap tour-date">
+                                                                <input type="date" name="tour-date" value=""
+                                                                    class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date"
+                                                                    min="2018-08-01" max="2058-12-31"
+                                                                    aria-required="true" aria-invalid="false"
+                                                                    placeholder="Select Date*" /></span></p>
 
                                                         <p><span class="wpcf7-form-control-wrap special-request"><textarea
                                                                     name="special-request" cols="40" rows="10"
                                                                     class="wpcf7-form-control wpcf7-textarea"
                                                                     aria-invalid="false"
                                                                     placeholder="Special Request"></textarea></span></p>
+
+                                                        <a href="#">Terms and Conditions
+                                                            (required)</a>
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" value=""
+                                                                id="flexCheckDefault">
+                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                                Agree
+                                                            </label>
+                                                        </div>
                                                         <p>
                                                             <input type="submit" value="Submit Now"
                                                                 class="wpcf7-form-control wpcf7-submit" />
